--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
+    "expo-server-sdk": "^3.15.0",
     "express": "~4.16.1",
     "express-session": "^1.18.1",
     "google-auth-library": "^10.1.0",
